# genie-meeting

./: README.md  pyproject.toml
genie_meeting/: analyzer.py  cli.py
