[project]
name = "genie-meeting"
version = "0.1.0"
description = "PDF + meeting recording to structured notes with per-page discussion mapping"
requires-python = ">=3.9"
dependencies = [
    "genie-core @ git+https://github.com/Simon99/genie-core.git",
]

[project.scripts]
genie-meeting = "genie_meeting.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
